   - Synchronized[List,Set,SortedSet]: use java.util.Collections.synchronized*()
   - Typed* decorators: use generics for type safety, or java.util.Collections.checked*()
   - [List,Set,Map]Utils.EMPTY_*: use the corresponding fields in java.util.Collections
 
 o [COLLECTIONS-229] Removed deprecated collection classes and methods


New classes
-----------

 o [COLLECTIONS-432] CircularFifoQueue - analogous class to CircularFifoBuffer for the Queue interface
                     PredicatedQueue - analogous class to PredicatedBuffer
                     TransformedQueue - analogous class to TransformedBuffer
                     UnmodifiableQueue - analogous class to UnmodifiableBuffer
                     QueueUtils - analogous class to BufferUtils
 o [COLLECTIONS-422] PermutationIterator - generates unordered permutations of a collection. Thanks to Benoit Corne. 
 o [COLLECTIONS-404] SequencesComparator - an implementation of Eugene Myers difference algorithm in package o.a.c.c.sequence. Thanks to Jordane Sarda.
 o [COLLECTIONS-396] LazyIteratorChain - a variant of IteratorChain which supports lazy initialization. Thanks to Jeff Rodriguez.
 o [COLLECTIONS-322] NodeListIterator - supports iteration over a org.w3c.dom.NodeList. Thanks to Thomas Vahrst. 
 o [COLLECTIONS-313] CatchAndRethrowClosure - re-throws any checked exception as unchecked "FunctorException". Thanks to David J. M. Karlsen. 
 o [COLLECTIONS-275] IndexedCollection - collection decorator which provides a map-like view on an existing collection. Thanks to Stephen Kestle. 
 o [COLLECTIONS-258] DualLinkedHashBidiMap - bidi map implementation using LinkedHashMap instances. Thanks to Nathan Blomquist. 
 o [COLLECTIONS-242] Equator - interface for testing object equality. 
 o [COLLECTIONS-241] PassiveExpiringMap - map decorator which passively expires entries. Thanks to Elifarley Callado Coelho. 